trying to fix linker errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,13 @@ cmake_minimum_required(VERSION 2.8.11)
 project(PTIMETRACKER)
 
 set(MAIN_TARGET ptimetracker)
+set(MAIN_TARGET_LIB ptimetrackerlib)
 #set(TEST_TARGET test_ptimetracker)
 
 set(CMAKE_C_STANDARD 11)
 set(PTIMETRACKER_SRCS_NOT_MAIN src/exec-notify.c)
 set(PTIMETRACKER_SRCS ${PTIMETRACKER_SRCS_NOT_MAIN} src/main.cpp)
+set(PTIMETRACKER_MAIN_SRC src/main.cpp)
 #set(PTIMETRACKER_TEST_SRCS test/2080_test.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
@@ -16,7 +18,10 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 #find_package(Check REQUIRED)
 #include_directories(${CHECK_INCLUDE_DIR})
 
-add_executable(${MAIN_TARGET} ${PTIMETRACKER_SRCS})
+add_library(${MAIN_TARGET_LIB} ${PTIMETRACKER_SRCS_NOT_MAIN})
+
+add_executable(${MAIN_TARGET} ${PTIMETRACKER_MAIN_SRC})
+target_link_libraries(${MAIN_TARGET} ${MAIN_TARGET_LIB})
 
 
 #add_executable(${TEST_TARGET} ${DELAYBIND_SRCS_NOT_MAIN} ${DELAYBIND_TEST_SRCS})
