set c++ standard -> C++11 began writing proc functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,18 @@
-cmake_minimum_required(VERSION 2.8.11)
+cmake_minimum_required(VERSION 3.1)
 
 project(PTIMETRACKER)
+
+
 
 set(MAIN_TARGET ptimetracker)
 set(MAIN_TARGET_LIB ptimetrackerlib)
 #set(TEST_TARGET test_ptimetracker)
 
+#see https://stackoverflow.com/questions/10851247/how-to-activate-c-11-in-cmake
 set(CMAKE_C_STANDARD 11)
-set(PTIMETRACKER_SRCS_NOT_MAIN src/exec-notify.c)
+set(CMAKE_CXX_STANDARD 11)
+
+set(PTIMETRACKER_SRCS_NOT_MAIN src/exec-notify.c src/proc_functions.cpp)
 set(PTIMETRACKER_SRCS ${PTIMETRACKER_SRCS_NOT_MAIN} src/main.c)
 set(PTIMETRACKER_MAIN_SRC src/main.c)
 #set(PTIMETRACKER_TEST_SRCS test/2080_test.c)
