--- a/ptimetracker.cabal
+++ b/ptimetracker.cabal
@@ -41,27 +41,12 @@ build-type:          Simple
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
 
+Library 
 
-executable ptimetracker
-  -- .hs or .lhs file containing the Main module.
-  main-is:             Main.hs
-  
-  -- Modules included in this executable, other than Main.
-  -- other-modules:       
-  
-  -- LANGUAGE extensions used by modules in this package.
-  other-extensions:    CPP
-  
-  -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7
-  
-  -- Directories containing source files.
   hs-source-dirs:      src
-  
-  -- Base language which the package is written in.
   default-language:    Haskell2010
+  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
+  build-depends:       base >= 4.7, mtl
   
+  exposed-modules: TimeTracker.FFI, TimeTracker.Types
   extra-libraries: stdc++ timetracker
-
--- XXX TODO
--- other-modules: MusicReader
