--- a/ptimetracker.cabal
+++ b/ptimetracker.cabal
@@ -50,3 +50,12 @@ Library
   
   exposed-modules: TimeTracker.FFI, TimeTracker.Types, TimeTracker.Interface
   extra-libraries: stdc++ timetracker
+
+Executable ptimetracker
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+  main-is:             Main.hs
+  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
+  build-depends:       base >= 4.7, mtl, ptimetracker
+
+  extra-libraries: stdc++ timetracker
