--- a/ptimetracker.cabal
+++ b/ptimetracker.cabal
@@ -46,7 +46,7 @@ Library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
-  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session
+  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, time
   
   exposed-modules: TimeTracker.FFI, TimeTracker.Types, TimeTracker.Interface, TimeTracker.IO.Database, TimeTracker.Config.ConfigTypes, TimeTracker.Config.Options
   extra-libraries: stdc++ timetracker
