--- a/ptimetracker.cabal
+++ b/ptimetracker.cabal
@@ -45,8 +45,8 @@ Library
 
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
-  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, time, safe
+  ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
+  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, time, safe, containers
   
   exposed-modules: TimeTracker.FFI, TimeTracker.Types, TimeTracker.Interface, TimeTracker.IO.Database, TimeTracker.Config.ConfigTypes, TimeTracker.Config.Options
   extra-libraries: stdc++ timetracker
@@ -55,7 +55,7 @@ Executable ptimetracker
   hs-source-dirs:      src
   default-language:    Haskell2010
   main-is:             Main.hs
-  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
+  ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
   build-depends:       base >= 4.7, mtl, ptimetracker
 
   extra-libraries: stdc++ timetracker
