--- a/ptimetracker.cabal
+++ b/ptimetracker.cabal
@@ -46,7 +46,7 @@ Library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
-  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, time, safe, containers
+  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers
   
   exposed-modules: TimeTracker.FFI, TimeTracker.Types, TimeTracker.Interface, TimeTracker.IO.Database, TimeTracker.Config.ConfigTypes, TimeTracker.Config.Options
   extra-libraries: stdc++ timetracker
@@ -56,6 +56,6 @@ Executable ptimetracker
   default-language:    Haskell2010
   main-is:             Main.hs
   ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
-  build-depends:       base >= 4.7, ptimetracker, mtl, HDBC, HDBC-sqlite3, HDBC-session, time, safe, containers, unix, hslogger
+  build-depends:       base >= 4.7, ptimetracker, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers, unix, hslogger
 
   extra-libraries: stdc++ timetracker
