--- a/ptimetracker.cabal
+++ b/ptimetracker.cabal
@@ -48,7 +48,7 @@ Library
   ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
   build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers
   
-  exposed-modules: TimeTracker.FFI, TimeTracker.Types, TimeTracker.Interface, TimeTracker.IO.Database, TimeTracker.Config.ConfigTypes, TimeTracker.Config.Options
+  exposed-modules: TimeTracker.FFI, TimeTracker.Types, TimeTracker.Interface, TimeTracker.IO.Database, TimeTracker.Config.ConfigTypes, TimeTracker.Config.Options, TimeTracker.PidCache
   extra-libraries: stdc++ timetracker
 
 Executable ptimetracker
