--- a/ptimetracker.cabal
+++ b/ptimetracker.cabal
@@ -46,10 +46,11 @@ Library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
-  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers, unix, hslogger
+  build-depends:       base >= 4.7, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers, unix, hslogger, convertible, directory
   
   exposed-modules: TimeTracker.FFI, TimeTracker.Types, TimeTracker.Interface, TimeTracker.IO.Database,
-                   TimeTracker.Config.ConfigTypes, TimeTracker.Config.Options, TimeTracker.PidCache, TimeTracker.IO.Ticks
+                   TimeTracker.Config.ConfigTypes, TimeTracker.Config.Options, TimeTracker.PidCache, TimeTracker.IO.Ticks,
+                   TimeTracker.ProcEventType
   extra-libraries: stdc++ timetracker
 
 Executable ptimetracker
@@ -57,6 +58,6 @@ Executable ptimetracker
   default-language:    Haskell2010
   main-is:             Main.hs
   ghc-options:         -Wall -Wcompat -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns -Werror=missing-fields
-  build-depends:       base >= 4.7, ptimetracker, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers, unix, hslogger
+  build-depends:       base >= 4.7, ptimetracker, mtl, HDBC, HDBC-sqlite3, HDBC-session, safe, containers, unix, hslogger, convertible
 
   extra-libraries: stdc++ timetracker
